--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
         <!-- build:js scripts/modules.js -->
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="scripts/services/Colors.js"></script>
+        <script src="scripts/directives/drag.js"></script>
         <!-- endbuild -->
 </body>
 </html>
